#63 Fix navbar not showing in desktop mode

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -323,11 +323,9 @@ a.navbar-item:hover {
   background-color: transparent;
 }
 
-#navbarMenu {
-  top: -55px;
-}
 @media screen and (max-width: 1088px) {
   #navbarMenu {
+    top: -55px;
     background-color: rgb(50, 50, 50);
   }
 }
